FIx overflow for table on mobile

--- a/styles/Admin.campaigns.page.module.css
+++ b/styles/Admin.campaigns.page.module.css
@@ -18,4 +18,12 @@
 .title {
     margin-top: 4vh;
     text-decoration: underline;
+}   
+
+.table {
+    width: auto;
+    max-width: 100vw;
+    /* overflow-y: hidden; */
+    overflow-x: scroll;
+    /* overflow: scroll; */
 }
